[package]
name = "skunkr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
clap = { version = "4.3.1", features = ["derive", "cargo"] }
env_logger = "0.9"
libmdbx = "0.3.3"
log = "0.4.14"
prost = "0.11.9"
tokio = { version = "1.28.1", features = ["macros", "rt-multi-thread"] }
tokio-stream = "0.1.14"
tonic = "0.9.2"
tonic-reflection = "0.9.2"
tracing-core = "0.1.31"

[build-dependencies]
tonic-build = "0.9.2"
